peppe
dwm build options:
CFLAGS   = -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=200809L -DVERSION="6.3" -DXINERAMA
LDFLAGS  = -L/usr/X11R6/lib -lX11 -lXinerama -lfontconfig -lXft
CC       = cc
cc -c -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=200809L -DVERSION=\"6.3\" -DXINERAMA dwm.c
In file included from dwm.c:299:
config.h:49:23: error: ‘tile’ undeclared here (not in a function)
   49 |         { "[]=",      tile },    /* first entry is default */
      |                       ^~~~
config.h:51:23: error: ‘dwindle’ undeclared here (not in a function)
   51 |         { "[\\]",     dwindle },
      |                       ^~~~~~~
config.h:52:23: error: ‘grid’ undeclared here (not in a function)
   52 |         { "HHH",      grid },
      |                       ^~~~
config.h:53:23: error: ‘nrowgrid’ undeclared here (not in a function)
   53 |         { "###",      nrowgrid },
      |                       ^~~~~~~~
config.h:54:23: error: ‘horizgrid’ undeclared here (not in a function)
   54 |         { "---",      horizgrid },
      |                       ^~~~~~~~~
config.h:55:23: error: ‘gaplessgrid’ undeclared here (not in a function)
   55 |         { ":::",      gaplessgrid },
      |                       ^~~~~~~~~~~
config.h:56:23: error: ‘centeredmaster’ undeclared here (not in a function)
   56 |         { "|M|",      centeredmaster },
      |                       ^~~~~~~~~~~~~~
config.h:57:23: error: ‘centeredfloatingmaster’ undeclared here (not in a function)
   57 |         { ">M>",      centeredfloatingmaster },
      |                       ^~~~~~~~~~~~~~~~~~~~~~
config.h:93:52: error: ‘incrgaps’ undeclared here (not in a function)
   93 |         { MODKEY|Mod4Mask,              XK_u,      incrgaps,       {.i = +1 } },
      |                                                    ^~~~~~~~
config.h:95:52: error: ‘incrigaps’ undeclared here (not in a function)
   95 |         { MODKEY|Mod4Mask,              XK_i,      incrigaps,      {.i = +1 } },
      |                                                    ^~~~~~~~~
config.h:97:52: error: ‘incrogaps’ undeclared here (not in a function)
   97 |         { MODKEY|Mod4Mask,              XK_o,      incrogaps,      {.i = +1 } },
      |                                                    ^~~~~~~~~
config.h:99:52: error: ‘incrihgaps’ undeclared here (not in a function)
   99 |         { MODKEY|Mod4Mask,              XK_6,      incrihgaps,     {.i = +1 } },
      |                                                    ^~~~~~~~~~
config.h:101:52: error: ‘incrivgaps’ undeclared here (not in a function)
  101 |         { MODKEY|Mod4Mask,              XK_7,      incrivgaps,     {.i = +1 } },
      |                                                    ^~~~~~~~~~
config.h:103:52: error: ‘incrohgaps’ undeclared here (not in a function)
  103 |         { MODKEY|Mod4Mask,              XK_8,      incrohgaps,     {.i = +1 } },
      |                                                    ^~~~~~~~~~
config.h:105:52: error: ‘incrovgaps’ undeclared here (not in a function)
  105 |         { MODKEY|Mod4Mask,              XK_9,      incrovgaps,     {.i = +1 } },
      |                                                    ^~~~~~~~~~
config.h:107:52: error: ‘togglegaps’ undeclared here (not in a function); did you mean ‘toggletag’?
  107 |         { MODKEY|Mod4Mask,              XK_0,      togglegaps,     {0} },
      |                                                    ^~~~~~~~~~
      |                                                    toggletag
config.h:108:52: error: ‘defaultgaps’ undeclared here (not in a function); did you mean ‘DefaultGC’?
  108 |         { MODKEY|Mod4Mask|ShiftMask,    XK_0,      defaultgaps,    {0} },
      |                                                    ^~~~~~~~~~~
      |                                                    DefaultGC
dwm.c:1425:1: warning: ‘pushup’ defined but not used [-Wunused-function]
 1425 | pushup(const Arg *arg) {
      | ^~~~~~
dwm.c:1407:1: warning: ‘pushdown’ defined but not used [-Wunused-function]
 1407 | pushdown(const Arg *arg) {
      | ^~~~~~~~
config.h:12:18: warning: ‘smartgaps’ defined but not used [-Wunused-variable]
   12 | static       int smartgaps          = 0;        /* 1 means no outer gap when there is only one window */
      |                  ^~~~~~~~~
make: *** [Makefile:18: dwm.o] Errore 1
